# demo-cli

./: pyproject.toml
demo_cli/: __main__.py
